Fix card name overflow

--- a/frontend/public/stylesheets/index-2.4.0.css
+++ b/frontend/public/stylesheets/index-2.4.0.css
@@ -244,6 +244,10 @@ button.small {
   cursor: pointer !important;
 }
 
+.card__name {
+  overflow: hidden;
+}
+
 .card__toolbar {
   width: 100%;
   box-sizing: border-box;
